<resources>
    <string name="app_name">MobileUIDesign</string>
    <string name="todo">TODO</string>
    <string name="todoTwo">TODO</string>
    <string name="welcome_n_to_ui_lover">Welcome\n To UI Lover</string>
    <string name="download_all_the_n_available_on_the_u_lover_n_channel_for_free">Download all the \n available on the uı lover \n channel for free</string>
    <string name="get_started">Get Started</string>
</resources>